--- a/public/owner/assets/css/style.css
+++ b/public/owner/assets/css/style.css
@@ -2582,4 +2582,8 @@ footer.site-footer {
   cursor: pointer;
 }
 
+.login-content {
+  margin-top: 0px;
+}
+
 /*# sourceMappingURL=style.css.map */
