Add payment cart feature, optimize code

--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -9094,8 +9094,8 @@ h1, h2, h3, h4, h5,
 .ftco-cart button, .ftco-cart .form-control {
   height: 54px !important;
   text-align: center;
-  bordeR: 1px solid rgba(0, 0, 0, 0.05) !important;
-  color: #000000 !important;
+  bordeR: 1px solid rgba(0, 0, 0, 0.05);
+  color: #000000;
   padding: 0;
   font-size: 14px; }
 
