--- a/public/owner/assets/css/cs-listproduct.css
+++ b/public/owner/assets/css/cs-listproduct.css
@@ -71,7 +71,7 @@ a.fa.fa-pencil-square-o {
 }
 
 .modal .container-modal {
-    padding-top: 22px;
+    padding-top: 48px;
     width: 1080px;
     max-width: calc(100% - 32px);
     min-width: 200px;
@@ -207,4 +207,10 @@ a.fa.fa-pencil-square-o {
         opacity: 1;
     }
 
+}
+
+.addon-vnd {
+    position: absolute;
+    right: 0;
+    margin-right: 15px;
 }
