--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -9951,6 +9951,30 @@ textarea.form-control {
       color: #fff;
       border: 1px solid transparent; }
 
+.paginationP {
+  padding: 0;
+  margin: 0; }
+  .paginationP li {
+    display: inline-block;
+    margin-bottom: 4px;
+    font-weight: 400; }
+    .paginationP li a, .paginationP li span {
+      padding-top: 0px;
+      color: #000000;
+      align-items: center;
+      justify-content: center;
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      border-radius: 50%;
+      border: 1px solid #e6e6e6;
+      background: #fff; }
+     .paginationP li.active a, .paginationP li.active span {
+      padding-top: 0px;
+      background: #82ae46;
+      color: #fff;
+      border: 1px solid transparent; }
+
 .contact-section .contact-info p a {
   color: #1a1a1a; }
 
