--- a/public/owner/assets/css/cs-listproduct.css
+++ b/public/owner/assets/css/cs-listproduct.css
@@ -1,4 +1,3 @@
-
 a.fa.fa-times {
     font-size: 20px;
 }
@@ -213,4 +212,27 @@ a.fa.fa-pencil-square-o {
     position: absolute;
     right: 0;
     margin-right: 15px;
+}
+
+
+.order-table {
+    position: relative;
+}
+
+.order-table:after,
+.order-table:before {
+    content: "";
+    position: absolute;
+    top: 0px;
+    height: 37px;
+    width: 10px;
+    background: #e8e9ef;
+}
+
+.order-table:after {
+    right: -1px;
+}
+
+.order-table:before {
+    left: -1px;
 }
