--- a/public/owner/assets/css/cs-updateorder.css
+++ b/public/owner/assets/css/cs-updateorder.css
@@ -1,161 +1,3 @@
-.modal1 .container-modal1 {
-    padding-top: 150px;
-}
-
-.modal1.open {
-    display: block;
-}
-
-.modal1 {
-    display: none;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal1 .container-modal1 {
-    padding-top: 100px;
-    width: 1080px;
-    max-width: calc(100% - 32px);
-    min-width: 200px;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    animation: modal1-hide ease .5s;
-}
-
-.modal1 .close-icon {
-    position: absolute;
-    padding: 8px 16px;
-    font-size: 12px;
-    color: rgb(0, 0, 0);
-    right: 0;
-    line-height: 36px;
-    font-weight: 900;
-}
-
-.modal1 .close-icon:hover {
-    color: rgba(0, 0, 0, 0.579);
-}
-
-.modal1 .header-modal1 {
-    border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
-    background-color: #009688;
-    color: white;
-    text-align: center;
-    height: 70px;
-    line-height: 65px;
-    letter-spacing: 4px;
-    font-size: 30px;
-    font-weight: 100;
-}
-
-.modal1 .header-modal1 .heading-modal1 {
-    margin: 10px 0px;
-    letter-spacing: 4px;
-    font-weight: 200;
-}
-
-.modal1 .container-modal1 .content-modal1 {
-    height: 318px;
-    background-color: white;
-    padding: 0px 16px;
-}
-
-.modal1 .content-modal1 .margin {
-
-    display: inline-block;
-}
-
-.modal1 .container-modal1 .bill {
-    margin-top: 20px;
-}
-
-.modal1 .content-modal1 input {
-    width: 100%;
-    border: 1px solid #ccc;
-    line-height: 23px;
-    font-size: 15px;
-    margin: 8px 0px 20px;
-}
-
-.modal1 .container-modal1 .btn-update {
-    width: 100%;
-    display: block;
-    padding: 16px;
-    margin-bottom: 16px;
-    background-color: #009688;
-    text-align: center;
-    color: white;
-    text-decoration: none;
-}
-
-.modal1 .container-modal1 .btn-close {
-    width: 100%;
-    display: block;
-    padding: 16px;
-    margin-bottom: 16px;
-    background-color: #009688;
-    text-align: center;
-    color: white;
-    text-decoration: none;
-}
-
-.modal1 .container-modal1 .btn-update:hover {
-    background-color: #bbb5b5;
-    color: #000;
-}
-
-.modal1 .btn-pay a {}
-
-.modal1 .btn-pay .icon-tick {
-    font-weight: 700;
-}
-
-.modal1 .container-modal1 .footer-modal1 {
-    width: 100%;
-    display: inline-block;
-    position: relative;
-    margin: 15px 0px 32px;
-}
-
-
-.modal1 .footer-modal1 .support {
-    position: absolute;
-    right: 0;
-    display: inline;
-}
-
-.modal1 .footer-modal1>a {
-    text-decoration: none;
-
-}
-
-.modal1 .footer-modal1 .support a {
-    color: #2196F3;
-    margin-bottom: 15px;
-}
-
-/* Animation modal1 */
-
-@keyframes modal1-hide {
-
-    from {
-        transform: translateY(-150px);
-        opacity: 0;
-    }
-
-    to {
-        transform: translateY(0);
-        opacity: 1;
-    }
-
-}
-
-
 span.total_product {
     justify-content: space-between;
     padding-right: 40px;
@@ -375,6 +217,10 @@ a.fa.fa-pencil-square-o {
 
 a.btn-primary.btn-block.btn-done-edit {
     color: white;
+}
+
+ul, ol {
+    padding-left: 10px;
 }
 
 .order-table2 tr th {
