complete blog functionalities

--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -14660,3 +14660,7 @@ textarea.form-control {
     stroke-dashoffset: -136px;
   }
 }
+
+.text-success.form-control{
+  color: green !important;
+}
