--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -14360,7 +14360,7 @@ textarea.form-control {
 
 .comment-list li {
   padding: 0;
-  margin: 0 0 30px 0;
+  margin: 0 0 15px 0;
   float: left;
   width: 100%;
   clear: both;
@@ -14377,20 +14377,21 @@ textarea.form-control {
   border-radius: 50%;
 }
 
-.comment-list li .comment-body {
+/* .comment-list li .comment-body {
   float: right;
   width: calc(100% - 80px);
-}
+} */
 
 .comment-list li .comment-body h3 {
-  font-size: 20px;
+  font-size: 15px;
 }
 
 .comment-list li .comment-body .meta {
   text-transform: uppercase;
-  font-size: 13px;
+  font-size: 12px;
   letter-spacing: .1em;
-  color: #ccc;
+  /* color: #ccc; */
+  color: gray;
 }
 
 .comment-list li .comment-body .reply {
